--- a/src/views/pages/add-car.ejs
+++ b/src/views/pages/add-car.ejs
@@ -36,13 +36,13 @@
           />
         </div>
         <div>
-          <label for="carPrice" class="block text-sm font-medium text-gray-700"
+          <label for="price" class="block text-sm font-medium text-gray-700"
             >Car Price</label
           >
           <input
             type="number"
-            id="carPrice"
-            name="carPrice"
+            id="price"
+            name="price"
             required
             class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm font-medium h-10 px-3"
           />
